Leaderboard :one: :crown:

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -13,7 +13,7 @@
     <p class="p-3">Version: {{version}}</p>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary" class="header">
+    <mat-toolbar color="primary" class="header mat-elevation-z5">
       <button mat-icon-button class="menu-button" (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
