--- a/web/src/app/match-history/match-history.component.html
+++ b/web/src/app/match-history/match-history.component.html
@@ -1,1 +1,14 @@
-<p>match-history works!</p>
+<mat-card *ngFor="let match of matches$ | async" class="mat-elevation-z4 m-4">
+  <mat-card-subtitle class="text-center">{{match.timestamp.toMillis() | date: 'medium'}}</mat-card-subtitle>
+  <div class="grid">
+    <button mat-raised-button class="team1-button team-blue-player1">{{match.team1}}</button>
+    <div class="score-grid text-center">
+      <p class="team1-score text-center m-0"
+         [ngClass]="{'winner-score' : match.team1Score === 10}">{{match.team1Score}}</p>
+      <p class="score-divider text-center m-0">:</p>
+      <p class="team2-score text-center m-0"
+         [ngClass]="{'winner-score' : match.team2Score === 10}">{{match.team2Score}}</p>
+    </div>
+    <button mat-raised-button class="team2-button team-red-player1">{{match.team2}}</button>
+  </div>
+</mat-card>
