--- a/web/src/app/leaderboard/leaderboard.component.html
+++ b/web/src/app/leaderboard/leaderboard.component.html
@@ -1,38 +1,38 @@
 <table *ngIf="statistics$" mat-table [dataSource]="statistics$" class="mat-elevation-z4 mt-4">
 
   <ng-container matColumnDef="rank">
-    <th mat-header-cell *matHeaderCellDef> Rank</th>
+    <th mat-header-cell *matHeaderCellDef>Rank</th>
     <td mat-cell *matCellDef="let element; let i = index;"> {{i + 1}} </td>
   </ng-container>
 
   <ng-container matColumnDef="teamName">
-    <th mat-header-cell *matHeaderCellDef>Team Name</th>
+    <th mat-header-cell *matHeaderCellDef>Team</th>
     <td mat-cell *matCellDef="let element">{{element.teamName}}</td>
   </ng-container>
 
   <ng-container matColumnDef="wins">
-    <th mat-header-cell *matHeaderCellDef>Wins</th>
-    <td mat-cell *matCellDef="let element">{{element.wins}}</td>
+    <th mat-header-cell class="text-center" *matHeaderCellDef>Wins</th>
+    <td mat-cell *matCellDef="let element" class="text-center">{{element.wins}}</td>
   </ng-container>
 
   <ng-container matColumnDef="losses">
-    <th mat-header-cell *matHeaderCellDef>Losses</th>
-    <td mat-cell *matCellDef="let element">{{element.losses}}</td>
+    <th mat-header-cell class="text-center" *matHeaderCellDef>Losses</th>
+    <td mat-cell *matCellDef="let element" class="text-center">{{element.losses}}</td>
   </ng-container>
 
   <ng-container matColumnDef="goals">
-    <th mat-header-cell *matHeaderCellDef>Gaols</th>
-    <td mat-cell *matCellDef="let element">{{element.goals}}</td>
+    <th mat-header-cell class="text-center" *matHeaderCellDef>Gaols</th>
+    <td mat-cell *matCellDef="let element" class="text-center">{{element.goals}}</td>
   </ng-container>
 
   <ng-container matColumnDef="goalsAgainst">
-    <th mat-header-cell *matHeaderCellDef>Goals Against</th>
-    <td mat-cell *matCellDef="let element">{{element.goalsAgainst}}</td>
+    <th mat-header-cell class="text-center" *matHeaderCellDef>Goals Against</th>
+    <td mat-cell *matCellDef="let element" class="text-center">{{element.goalsAgainst}}</td>
   </ng-container>
 
   <ng-container matColumnDef="goalDifference">
-    <th mat-header-cell *matHeaderCellDef>Goals +/-</th>
-    <td mat-cell *matCellDef="let element">{{element.goalDifference}}</td>
+    <th mat-header-cell class="text-center" *matHeaderCellDef>Goals +/-</th>
+    <td mat-cell *matCellDef="let element" class="text-center">{{element.goalDifference}}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
